[gd_scene load_steps=9 format=3 uid="uid://phjk1c43q8wa"]

[ext_resource type="PackedScene" uid="uid://8ioiifjaduq0" path="res://scenes/ui/ability_upgrade_card.tscn" id="1_3fsjt"]
[ext_resource type="Script" path="res://scenes/ui/upgrade_screen.gd" id="1_uhf4e"]
[ext_resource type="AudioStream" uid="uid://56k8dpdcbbvb" path="res://assets/audio/levelup.wav" id="3_d3fp1"]
[ext_resource type="PackedScene" uid="uid://cf1dxk0u24mtl" path="res://scenes/ui/sound_button.tscn" id="4_xj1eu"]

[sub_resource type="Animation" id="Animation_i26k7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("%MetaButtonContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_hql5r"]
resource_name = "in"
length = 0.15
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../AudioStreamPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("%MetaButtonContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_a8uvh"]
resource_name = "out"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("%MetaButtonContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vk113"]
_data = {
"RESET": SubResource("Animation_i26k7"),
"in": SubResource("Animation_hql5r"),
"out": SubResource("Animation_a8uvh")
}

[node name="UpgradeScreen" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_uhf4e")
upgrade_card_scene = ExtResource("1_3fsjt")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.172549, 0.298039, 0.639216, 0.352941)

[node name="AnimationPlayer" type="AnimationPlayer" parent="ColorRect"]
unique_name_in_owner = true
autoplay = "in"
libraries = {
"": SubResource("AnimationLibrary_vk113")
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CardContainer" type="HBoxContainer" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 16

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
size_flags_vertical = 8

[node name="MetaButtonContainer" type="HBoxContainer" parent="MarginContainer/MarginContainer"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = -347

[node name="RerollContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer/MetaButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="RerollButton" parent="MarginContainer/MarginContainer/MetaButtonContainer/RerollContainer" instance=ExtResource("4_xj1eu")]
unique_name_in_owner = true
custom_minimum_size = Vector2(112, 24)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
text = "Reroll"

[node name="RerollLabel" type="Label" parent="MarginContainer/MarginContainer/MetaButtonContainer/RerollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "3 Remaining"

[node name="EmergencyHealingContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer/MetaButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="EmergencyHealingButton" parent="MarginContainer/MarginContainer/MetaButtonContainer/EmergencyHealingContainer" instance=ExtResource("4_xj1eu")]
unique_name_in_owner = true
custom_minimum_size = Vector2(112, 24)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
text = "Emergency Healing"

[node name="EmergencyHealingLabel" type="Label" parent="MarginContainer/MarginContainer/MetaButtonContainer/EmergencyHealingContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "3 Remaining"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_d3fp1")
bus = &"SFX"
